--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 </body>
 </html>
 
-<a href="https://time.is/Tokyo" id="time_is_link" rel="nofollow" style="font-size:36px">東京时间:</a>
-<span id="Tokyo_z444" style="font-size:36px"></span>
-<script src="//widget.time.is/t.js"></script>
+<script src="//widget.time.is/zh.js"></script>
 <script>
-time_is_widget.init({Tokyo_z444:{}});
+time_is_widget.init({Tokyo_z444:{template:"TIME<br>DATE<br>SUN", date_format:"year年monthnamednum日dayname，第week周", sun_format:"日出: srhour:srminute 日落: sshour:ssminute<br>昼长: dlhours时 dlminutes分", coords:"35.6895000,139.6917100"}});
 </script>
