--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 <title>Leslie-clock</title>
 </head>
 <body>
-    <a href="https://time.is/Tokyo" id="time_is_link" rel="nofollow" style="font-size:36px">東京时间:</a>
-    <span id="Tokyo_z444" style="font-size:36px"></span>
+    <a href="https://time.is/Guangzhou" id="time_is_link" rel="nofollow" style="font-size:50px">广州时间:</a>
+    <span id="Guangzhou_z43d" style="font-size:50px"></span>
 </body>
 </html>
 
 <script src="//widget.time.is/zh.js"></script>
 <script>
-time_is_widget.init({Tokyo_z444:{template:"TIME<br>DATE<br>SUN", date_format:"year年monthnamednum日dayname，第week周", sun_format:"日出: srhour:srminute 日落: sshour:ssminute<br>昼长: dlhours时 dlminutes分", coords:"35.6895000,139.6917100"}});
+time_is_widget.init({Guangzhou_z43d:{template:"TIME<br>DATE<br>SUN", date_format:"year年monthnamednum日dayname，第week周", sun_format:"日出: srhour:srminute 日落: sshour:ssminute<br>昼长: dlhours时 dlminutes分", coords:"23.1166700,113.2500000"}});
 </script>
