--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Leslie-clock</title>
 </head>
 <body>
-    <a href="https://time.is/Guangzhou" id="time_is_link" rel="nofollow" style="font-size:100px;background:e3b4b8">广州时间:</a>
+    <span id="time_is_link" rel="nofollow" style="font-size:100px;background:e3b4b8">广州时间:</span>
 <span id="Guangzhou_z43d" style="font-size:100px;background:#e3b4b8"></span>
 </body>
 </html>
