--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <meta charset="utf-8">
 <title>Leslie-clock</title>
 </head>
-<body>
-    <span id="time_is_link" rel="nofollow" style="font-size:100px;background:e3b4b8">广州时间:</span>
-<span id="Guangzhou_z43d" style="font-size:100px;background:#e3b4b8"></span>
+<body style="background:#e3b4b8" >
+    <span id="time_is_link" rel="nofollow" style="font-size:100px;font-family:Montserrat,Arial,Helvetica,sans-serif;">广州时间:</span>
+<span id="Guangzhou_z43d" style="font-size:100px"></span>
 </body>
 </html>
 
